--- a/vignettes/metacomp.Rmd
+++ b/vignettes/metacomp.Rmd
@@ -19,8 +19,8 @@ old.opt <- options(
 ```
 
 Most R object comparison functions are good at telling you that
-objects are different, but less so at intuitively conveying _how_ they are
-different.  `diffobj` seeks to provide the "aha, that's how they are different" comparison.  In this vignette I will compare `diffPrint` to `all.equal`, and to `testthat::compare`.
+objects are different, but less so at conveying _how_ they are
+different.  `diffobj` seeks to provide the "aha, that's how they are different" comparison.  In this vignette I will compare `diffPrint` to `all.equal` and to `testthat::compare`.
 
 Disclaimer: I picked the examples here to showcase `diffobj` capabilities, not
 to carry out a fair and balanced comparison of the functions.  Nonetheless, I
@@ -135,3 +135,8 @@ conflict so they cannot be used together.
 
 For a more thorough exploration of `diffobj` function features please see the
 [primary `diffobj` vignette](diffobj.html).
+
+```{r, echo=FALSE}
+options(old.opt)
+```
+
