--- a/inst/doc/diffobj.Rmd
+++ b/inst/doc/diffobj.Rmd
@@ -92,7 +92,10 @@ diffPrint(state.abb, state.abb2)
 
 Due to the different wrapping frequency no line in the text display of our two vectors matches.  Despite this, `diffPrint` only highlights the lines that actually contain differences.  The side effect is that lines that only contain matching elements are shown as matching even though the actual lines may be different.  You can turn off this behavior in favor of a normal line diff with the `unwrap.atomic` argument to `diffPrint`.
 
-Currently this only works for _unnamed_ vectors, and even for them some inputs may produce sub-optimal results.  You can also use `diffChr` (see below) to do a direct element by element comparison.
+Currently this only works for _unnamed_ vectors, and even for them some inputs
+may produce sub-optimal results.  Nested vectors inside lists will not be
+unwrapped.  You can also use `diffChr` (see below) to do a direct element by
+element comparison.
 
 ## Other Diff Functions
 
@@ -281,8 +284,6 @@ linearly with the input size.
 
 You can improve performance somewhat by using `diffChr` since that skips the
 capture part, and by turning off `word.diff`:
-
-For example:
 
 ```{r, eval=FALSE}
 v1 <- 1:5e4
