--- a/inst/doc/embed.Rmd
+++ b/inst/doc/embed.Rmd
@@ -41,6 +41,7 @@ This is what a basic code block should look like:
 Here we use this same code as an actual markdown R code block:
 
 ```{r results='asis'}
+library(diffobj)
 cat(
   as.character(
     diffPrint(
