--- a/vignettes/embed.Rmd
+++ b/vignettes/embed.Rmd
@@ -13,6 +13,9 @@ vignette: >
   \usepackage[utf8]{inputenc}
 ---
 
+```{r echo=FALSE}
+library(diffobj)
+```
 ## Basic Requirements
 
 Any R chunks that produce diffs should include the `results='asis'` option,
@@ -41,7 +44,6 @@ This is what a basic code block should look like:
 Here we use this same code as an actual markdown R code block:
 
 ```{r results='asis'}
-library(diffobj)
 cat(
   as.character(
     diffPrint(
