--- a/inst/doc/embed.Rmd
+++ b/inst/doc/embed.Rmd
@@ -11,8 +11,12 @@ vignette: >
   %\VignetteIndexEntry{Embed Diffs in R Markdown}
   %\VignetteEngine{knitr::rmarkdown}
   \usepackage[utf8]{inputenc}
+
 ---
 
+```{r echo=FALSE}
+library(diffobj)
+```
 ## Basic Requirements
 
 Any R chunks that produce diffs should include the `results='asis'` option,
@@ -41,7 +45,6 @@ This is what a basic code block should look like:
 Here we use this same code as an actual markdown R code block:
 
 ```{r results='asis'}
-library(diffobj)
 cat(
   as.character(
     diffPrint(
